# quantc

./: .clinerules  CMakeLists.txt  README.md  extension.js  language-configuration.json  package-lock.json  package.json  quantc-settings.json  roadmap.txt  tsconfig.json
src/: Main.ts
src/extension/: Lexer.ts  Main.ts  SymbolTable.ts  Token.ts  TokenType.ts
src/extension/ast/: ASTNode.ts  AssignmentNode.ts  BinaryExpressionNode.ts  ExpressionNode.ts  IntegerLiteralNode.ts  Keyword.ts  LiteralExpressionNode.ts  Method.ts  Modifiers.ts  ObjectRegistry.ts  ObjectType.ts  PairedNodes.ts  ProgramNode.ts  StringLiteralNode.ts  VariableDeclarationNode.ts
src/extension/ast/modifiers/: MutabilityModifier.ts  ScopeModifier.ts  VisibilityModifier.ts
src/extension/ast/nodes/: ASTNode.ts  ExpressionStatementNode.ts  ProgramNode.ts  StatementNode.ts  VariableDeclarationNode.ts
src/extension/ast/setup/: BuiltInOperators.ts  BuiltInStrucutures.ts  BuiltInTypes.ts  Keyword.ts  Keywords.ts  (+2 more)
src/extension/diagonistic/: DiagnosticSeverity.ts  LexerDiagnosticType.ts
src/extension/lexer/: Keywords.ts  Lexer.ts  LexerDiagonistics.ts  MutabilityType.ts  OperatorDefinition.ts  StorageType.ts  Token.ts  TokenStream.ts  TokenType.ts  VisibilityType.ts
src/extension/parser/: Parser.ts
src/extension/semantic/: Diagnostic.ts  Scope.ts  SemanticAnalyser.ts  Symbol.ts  TypeRegistry.ts  TypeSymbol.ts  VariableSymbol.ts
src/quantc/: Auto.h  Init.cpp  Output.cpp  Output.h
src/quantc/writter/: AbstractAnimal.h  Animal.h  Dog.h
syntaxes/: qc-tmLanguage.json
tools/: transpile.py
(+6 files in other folders)
